tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Thorium232-nNTmwkdsQgyE6QAfmIwcvg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5146561096043994302,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you were looking at Thorium 232 and wondering how to make it?\n\nYou could centrifuge it at a horrible chance rate with a long recipe but there are better ways of obtaining it.\n\nThe better ways are processing chains that can be made in three different paths with the third path being unlocked at a further stage after obtaining Fusion with the Neutron Activator.\n\nThe first path requires the chemical plant multiblock that you might not be familiar with but will become required to create rocket fuel for any tier three or higher rocket. This path is the fastest with only two steps to obtain the Thorium 232, but requires borax which can only be obtained (for now) through mining salt veins as a byproduct or through bees (probably the better option if you already have some).\n\nThe second path is a six step processing chain that requires Chemical Reactors, a Centrifuge, and an EBF. Even though it is longer it offers much better conversion ratio (75% instead of 25% in chemical plant), instead of borax it requires nitric acid (4000L per dust if you account for recycling) and 100L of fluorine per dust.\n\nEither way I would recommend using AE2FC as it allows on demand fluid crafting which will assist in both processing chains.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lThorium 232?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
