tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Tier5IV-AAAAAAAAAAAAAAAAAAAA1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 213,
  "prerequisites": [
    176,
    1225,
    394,
    861
  ],
  "properties": {
    "auto_claim": false,
    "desc": "IV-Level. You will need Tungstensteel for machines. Suggested planets and moons to visit: Mars, Phobos, Deimos.\n\nMake sure to get a set of TPV coils for your EBF.\n\nYou should've learned \"how to GregTech\" by now. If not, go clean up the machine craters in your base...\n\nMany multiblock machines unlock at this tier. Make sure you have an Alloy Blast Smelter ready to go and check the Multiblock Madness tab.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lTier 5 (IV)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "tierthemes:iv",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    1225,
    394,
    861
  ],
  "rewards": [],
  "tasks": []
}
