tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ToSiftorNottoSif-AAAAAAAAAAAAAAAAAAAL8w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3059,
  "prerequisites": [
    3057
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The real question is, who came up with all these sifting recipes?\n\nYou can get some Uranium out of this so it's not all bad.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lTo Sift, or Not to Sift?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3057
  ],
  "rewards": [],
  "tasks": []
}
