tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Universalpickaxe-VoQ7oLYhTjuomLCz_ddOhA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13123856808703118980,
  "prerequisites": [
    2321,
    1409
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This tool can mine blocks instantly, including GregTech blocks or cables. \n\nUsing left-click will mine blocks as usual, right-clicking will harvest blocks 1 by 1. Enabling silk touch will work for both. \n\n[note]To enable silk touch mode Shift+Right Click air while holding the Vajra.[/note]\n\n[warn]If you already have a Vajra built before GTNH version 2.8, you can put it in the crafting grid to swap it to the new version[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lUniversal pickaxe, Vajra",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2321,
    1409
  ],
  "rewards": [],
  "tasks": []
}
