tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__UraniumFiltrate-AAAAAAAAAAAAAAAAAAAL9A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3060,
  "prerequisites": [
    3059
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can process this further with some hydrofluoric acid.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lUranium Filtrate",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3059
  ],
  "rewards": [],
  "tasks": []
}
