tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__VenusTrip-AAAAAAAAAAAAAAAAAAAGtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1717,
  "prerequisites": [
    1715
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Venus has 3 different veins, with quantium and titanium the most important to grab. And Naquadah if you still don't have enough.\n\n[note]You can also get firestone from small ore if you still need it.[/note]\n\n§5Warning! Venus requires a full set of armor with the Spacesuit capability in it or it will kill the player on entering it!!\n\nCheck the space race chapter for more information.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lVenus Trip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1715
  ],
  "rewards": [],
  "tasks": []
}
